# opengl-3d-renderer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  install-deps-linux.sh  todo.txt
.github/workflows/: cmake.yml
application/: CMakeLists.txt  Untitled-1.cpp  imgui.ini
application/assets/shaders/: fragment.glsl  screen-vertex.glsl  vertex.glsl
application/private/Renderer/: ShaderInternal.cpp  ShaderInternal.hpp
application/source/: UserApplication.cpp  UserApplication.hpp  UserScene.cpp  UserScene.hpp
application/src/: main.cpp
application/src/Application/: Application.cpp  Application.hpp  Framebuffer.cpp  Framebuffer.hpp  OBJLoader.cpp  OBJLoader.hpp  Scene.cpp  Scene.hpp
application/src/Core/: EntryPoint.cpp  EntryPoint.hpp
application/src/Events/: EventEmitter.hpp
application/src/Extensions/Renderer/: BuffersVectorProps.hpp
application/src/Filesystem/: Filesystem.cpp  Filesystem.hpp
application/src/ImGui/: ImGuiBuild.hpp  ImGuiContext.cpp  ImGuiContext.hpp
application/src/Input/: Input.hpp
application/src/Renderer/: Bindable.hpp  Buffers.cpp  Buffers.hpp  GraphicsContext.cpp  GraphicsContext.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererCore.cpp  RendererCore.hpp  Shader.cpp  Shader.hpp  Shader.inl  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp
application/src/Renderer/Backend/: Buffers.cpp  Buffers.hpp  Framebuffer.cpp  Framebuffer.hpp  RendererResource.hpp  Shader.cpp  Shader.hpp  Shader.inl  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp
application/src/Renderer/Camera/: Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
application/src/Renderer/Loaders/: OBJLoader.cpp  OBJLoader.hpp
application/src/Utility/: Checker.hpp  FileManager.cpp  FileManager.hpp
application/src/Window/: Window.cpp  Window.hpp
crenderr/: CMakeLists.txt  imgui.ini
crenderr/assets/shaders/: fragment.glsl  screen-fragment.glsl
crenderr/source/Application/: Application.hpp  Scene.hpp
crenderr/source/Core/: EntryPoint.cpp
crenderr/source/Crenderr/Application/: Application.cpp  Application.hpp  Scene.cpp  Timestamp.hpp
crenderr/source/Crenderr/Filesystem/: Filesystem.cpp  Filesystem.hpp
crenderr/source/Crenderr/ImGui/: ImGuiContext.cpp  ImGuiContext.hpp
crenderr/source/Crenderr/Logger/: Logger.hpp
crenderr/source/Crenderr/Renderer/: Renderer.cpp  Renderer.hpp  RendererCore.hpp  RendererElements.cpp  RendererElements.hpp
crenderr/source/Crenderr/Renderer/Backend/: Buffers.cpp  Framebuffer.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp
crenderr/source/Crenderr/Renderer/Camera/: Camera.cpp  Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicProjection.cpp  OrthographicProjection.hpp  PerspectiveCamera.hpp  PerspectiveProjection.cpp  PerspectiveProjection.hpp  Projection.hpp
crenderr/source/Crenderr/Renderer/Camera/Controllers/: CameraController.cpp  CameraController.hpp
crenderr/source/Crenderr/Renderer/Camera/Projections/: Orthographic.cpp  Orthographic.hpp  Perspective.cpp  Perspective.hpp
crenderr/source/Crenderr/Renderer/Loaders/: OBJLoader.hpp
crenderr/source/Crenderr/Utility/: Checker.cpp
crenderr/source/ImGui/: ImGuiContext.cpp
crenderr/source/Logger/: Logger.cpp
crenderr/source/Renderer/: GraphicsContext.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp
crenderr/source/Renderer/Backend/: Buffers.cpp  Buffers.hpp  Shader.inl  Texture2D.cpp
crenderr/source/Renderer/Camera/: PerspectiveCamera.hpp
crenderr/source/Renderer/Loaders/: OBJLoader.cpp  OBJLoader.hpp
crenderr/source/Utility/: NonConstructible.hpp  NonCopyable.hpp
crenderr/source/Window/: Window.cpp  Window.hpp
tools/: count-lines.ps1  count-lines.sh
